# aws_stream_study

./: .env-template  Dockerfile  Makefile  README.md  docker-compose.yml  generator.py  models.py  pyproject.toml  router.py
