[tool.poetry]
name = "fastapi-kinesis"
version = "0.1.0"
description = ""
authors = ["Daniel Tanaka <daniel.tanakapinto@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^25.4.0"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
boto3 = "^1.34.117"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
